<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <org.opencv.android.JavaCameraView
        android:id="@+id/cameraView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:layout_alignParentTop="true"
        android:background="#CCFF4081" />

    <ImageView
        android:id="@+id/iv_histogram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv1"
        android:layout_alignParentLeft="true"
        android:paddingTop="@dimen/slider_vertical_margin"
        />

    <SeekBar
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/slider_vertical_margin"
        android:paddingTop="@dimen/slider_vertical_margin"
        />

    <SeekBar
        android:id="@+id/slider2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/slider"
        />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/btn_caption_gray" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_caption_globalth"
        android:layout_below="@+id/btn1"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_caption_otsu"
        android:layout_below="@+id/btn2"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_caption_adaptive1"
        android:layout_below="@+id/btn3"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_caption_adaptive2"
        android:layout_below="@+id/btn4"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="THRESH_BINARY"
        android:layout_below="@+id/btn5"
        android:layout_alignParentRight="true" />

</RelativeLayout>